--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
     "organization": true
   },
   "devDependencies": {
-    "@types/babel__traverse": "^7.18.3",
-    "@types/jest": "^29.5.1",
-    "@types/node": "18.16.0",
-    "@types/prettier": "^2.7.2",
-    "aws-cdk": "2.76.0",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
+    "@types/babel__traverse": "^7.20.1",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.6.0",
+    "@types/prettier": "^2.7.3",
+    "aws-cdk": "2.85.0",
+    "jest": "^29.6.4",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "~4.9.4"
+    "typescript": "~5.2.2"
   },
   "dependencies": {
-    "@aws-solutions-constructs/aws-s3-sqs": "^2.39.0",
-    "@aws-solutions-constructs/aws-sqs-lambda": "^2.39.0",
-    "aws-cdk-lib": "^2.76.0",
-    "constructs": "^10.1.235"
+    "@aws-solutions-constructs/aws-s3-sqs": "^2.44.0",
+    "@aws-solutions-constructs/aws-sqs-lambda": "^2.44.0",
+    "aws-cdk-lib": "2.85.0",
+    "constructs": "^10.2.70"
   }
 }
