--- a/package.json
+++ b/package.json
@@ -19,20 +19,22 @@
     "organization": true
   },
   "devDependencies": {
-    "@types/babel__traverse": "^7.20.1",
-    "@types/jest": "^29.5.4",
-    "@types/node": "^20.6.0",
+    "@types/babel__traverse": "^7.20.5",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.10",
     "@types/prettier": "^2.7.3",
-    "aws-cdk": "2.85.0",
+    "aws-cdk": "2.123.0",
     "jest": "^29.6.4",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "~5.2.2"
   },
   "dependencies": {
-    "@aws-solutions-constructs/aws-s3-sqs": "^2.44.0",
-    "@aws-solutions-constructs/aws-sqs-lambda": "^2.44.0",
-    "aws-cdk-lib": "2.85.0",
-    "constructs": "^10.2.70"
+    "@aws-sdk/client-acm-pca": "^3.502.0",
+    "@aws-solutions-constructs/aws-s3-sqs": "^2.49.0",
+    "@aws-solutions-constructs/aws-sqs-lambda": "^2.49.0",
+    "aws-cdk-lib": "2.123.0",
+    "constructs": "^10.2.70",
+    "npm": "^10.4.0"
   }
 }
