--- a/templates/PAAStack.yaml
+++ b/templates/PAAStack.yaml
@@ -63,11 +63,62 @@ Resources:
         Ref: vendorId
     UpdateReplacePolicy: Delete
     DeletionPolicy: Delete
+  CrlBucketName6B0FB645:
+    Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
+    Properties:
+      BucketName: "matter-crl-bucket"
+      AccessControl: Private
+      OwnershipControls:
+        Rules:
+          - ObjectOwnership: BucketOwnerPreferred
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: AES256
+      Tags: 
+        - Key: "Purpose"
+          Value: "AWSPCA Certificate Revocation List"
+      PublicAccessBlockConfiguration:
+        RestrictPublicBuckets: True
+        BlockPublicAcls: True
+        BlockPublicPolicy: True
+        IgnorePublicAcls: True
+  CrlBucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref CrlBucketName6B0FB645
+      PolicyDocument:
+        Statement:
+          - Sid: AllowAWSPCAPutObjectAccessForCRLAndChainCertificates
+            Action:
+              - "s3:GetBucketAcl"
+              - "s3:GetBucketLocation"
+              - "s3:PutObject"
+              - "s3:PutObjectAcl"
+            Effect: "Allow"
+            Resource:
+              - !Join ["", ["arn:aws:s3:::", !Ref CrlBucketName6B0FB645, "/*"]]
+              - !Join ["", ["arn:aws:s3:::", !Ref CrlBucketName6B0FB645]]
+            Principal:
+              Service:
+                - "acm-pca.amazonaws.com"
   CAPAA:
     Type: AWS::ACMPCA::CertificateAuthority
     Properties:
       KeyAlgorithm: EC_prime256v1
       SigningAlgorithm: SHA256WITHECDSA
+      RevocationConfiguration:
+        CrlConfiguration:
+          Enabled: true
+          ExpirationInDays: 90
+          S3ObjectAcl : "BUCKET_OWNER_FULL_CONTROL"
+          S3BucketName:
+            Fn::GetAtt:
+              - CrlBucketName6B0FB645
+              - BucketName
+          CrlDistributionPointExtensionConfiguration:
+            OmitExtension: true
       Subject:
         CustomAttributes:
           Fn::If:
