--- a/lambda/build.gradle
+++ b/lambda/build.gradle
@@ -38,20 +38,20 @@ dependencies {
 
     // Others
     implementation 'com.google.code.gson:gson:2.10'
-    implementation 'com.google.guava:guava:30.1.1-jre'
-    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
-    implementation 'org.bouncycastle:bcmail-jdk15on:1.70'
-    implementation 'org.apache.logging.log4j:log4j-api:[2.19.0,)'
-    implementation 'org.apache.logging.log4j:log4j-core:[2.19.0,)'
-    implementation 'org.apache.logging.log4j:log4j-slf4j18-impl:[2.18.0,)'
+    implementation 'com.google.guava:guava:33.3.0-jre'
+    implementation 'org.bouncycastle:bcprov-jdk15on:[1.70,)'
+    implementation 'org.bouncycastle:bcmail-jdk15on:[1.70,)'
+    implementation 'org.apache.logging.log4j:log4j-api:[2.19.0,2.23)'
+    implementation 'org.apache.logging.log4j:log4j-core:[2.19.0,2.23)'
+    implementation 'org.apache.logging.log4j:log4j-slf4j18-impl:[2.18.0,2.23)'
 
     implementation 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     // Use JUnit Jupiter for testing.
-    testImplementation 'org.apache.logging.log4j:log4j-api:[2.19.0,)'
-    testImplementation 'org.apache.logging.log4j:log4j-core:[2.19.0,)'
-    testImplementation 'org.apache.logging.log4j:log4j-slf4j18-impl:[2.18.0,)'
+    testImplementation 'org.apache.logging.log4j:log4j-api:[2.19.0,2.23)'
+    testImplementation 'org.apache.logging.log4j:log4j-core:[2.19.0,2.23)'
+    testImplementation 'org.apache.logging.log4j:log4j-slf4j18-impl:[2.18.0,2.23)'
     testImplementation 'org.junit.jupiter:junit-jupiter:[5.9.1,)'
     testImplementation 'org.mockito:mockito-core:4.9.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.9.0'
@@ -60,7 +60,7 @@ dependencies {
     testImplementation 'org.projectlombok:lombok:1.18.24'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:[5.9.1,)'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:[5.11.0,)'
 }
 
 tasks.register("buildZip", Zip) {
