--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
     "organization": true
   },
   "devDependencies": {
-    "@types/babel__traverse": "^7.20.5",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.11.10",
-    "@types/prettier": "^2.7.3",
-    "aws-cdk": "2.123.0",
-    "jest": "^29.6.4",
-    "ts-jest": "^29.1.2",
+    "@types/babel__traverse": "^7.20.6",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.5.4",
+    "aws-cdk": "2.155.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "~5.2.2"
+    "typescript": "~5.5.4"
   },
   "dependencies": {
-    "@aws-sdk/client-acm-pca": "^3.502.0",
-    "@aws-solutions-constructs/aws-s3-sqs": "^2.49.0",
-    "@aws-solutions-constructs/aws-sqs-lambda": "^2.49.0",
-    "aws-cdk-lib": "2.123.0",
-    "constructs": "^10.2.70",
-    "npm": "^10.4.0"
+    "@aws-sdk/client-acm-pca": "^3.645.0",
+    "@aws-solutions-constructs/aws-s3-sqs": "^2.68.0",
+    "@aws-solutions-constructs/aws-sqs-lambda": "^2.68.0",
+    "aws-cdk-lib": "2.155.0",
+    "constructs": "^10.3.0",
+    "npm": "^10.8.3",
+    "prettier": "^3.3.3"
   }
 }
