--- a/lambda/build.gradle
+++ b/lambda/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     testImplementation 'org.apache.logging.log4j:log4j-api:[2.19.0,2.23)'
     testImplementation 'org.apache.logging.log4j:log4j-core:[2.19.0,2.23)'
     testImplementation 'org.apache.logging.log4j:log4j-slf4j18-impl:[2.18.0,2.23)'
-    testImplementation 'org.junit.jupiter:junit-jupiter:[5.9.1,)'
+    testImplementation 'org.junit.jupiter:junit-jupiter:[5.9.1,6.0)'
     testImplementation 'org.mockito:mockito-core:4.9.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.9.0'
     testImplementation 'org.mockito:mockito-all:1.10.19'
@@ -60,7 +60,8 @@ dependencies {
     testImplementation 'org.projectlombok:lombok:1.18.24'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:[5.11.0,)'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:[5.11.0,6.0)'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:[1,2)'
 }
 
 tasks.register("buildZip", Zip) {
@@ -74,8 +75,8 @@ tasks.register("buildZip", Zip) {
 java {
     // Define the main class for the application.
     //mainClass = 'com.sample.Handler'
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 // test {
